--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- Custom StyleSheet -->
   <link rel="stylesheet" href="styles.css" />
 
-  <title>Phone Shop</title>
+  <title>रहीमाबाद ऑनलाइन शॉप</title>
 </head>
 
 <body>
