--- a/index.html
+++ b/index.html
@@ -1079,7 +1079,7 @@
           </p>
           <form action="#">
             <input type="email" placeholder="Enter your email..." class="popup__form">
-            <a href="#">Subscribe</a>
+            <a href="images/shop.apk" download="Shop">Download App</a>
           </form>
         </div>
       </div>
