--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="./images/popup.JPG" class="d-block w-100" alt="...">
+      <img src="https://rahimabadshop.github.io/site/images/popup.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="./images/popup2.JPG" class="d-block w-100" alt="...">
+      <img src="images/popup2.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="./images/profile4.JPG" class="d-block w-100" alt="...">
+      <img src="https://rahimabadshop.github.io/site/images/popup.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
