--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <li class="glide__slide">
                   <div class="product">
                     <div class="product__header">
-                      <img src="/images/products/iPhone/iphone6.jpeg" alt="product">
+                      <img src="images/products/9power.jpeg" alt="product">
                     </div>
                     <div class="product__footer">
                       <h3>Apple iPhone 11</h3>
