--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                       <img src="images/products/9power.jpeg" alt="product">
                     </div>
                     <div class="product__footer">
-                      <h3>Apple iPhone 11</h3>
+                      <h3>Redmi 9 Power</h3>
                       <div class="rating">
                         <svg>
                           <use xlink:href="./images/sprite.svg#icon-star-full"></use>
@@ -283,7 +283,7 @@
                         </svg>
                       </div>
                       <div class="product__price">
-                        <h4>$750</h4>
+                        <h4>₹11499</h4>
                       </div>
                       <a href="#"><button type="submit" class="product__btn">Add To Cart</button></a>
                     </div>
