--- a/index.html
+++ b/index.html
@@ -315,10 +315,10 @@
                 <li class="glide__slide">
                   <div class="product">
                     <div class="product__header">
-                      <img src="/images/products/sumsung/samsung5.jpeg" alt="product">
+                      <img src="images/products/OUD_OTG_844.jpg" alt="product">
                     </div>
                     <div class="product__footer">
-                      <h3>Samsung Galaxy</h3>
+                      <h3>OD OTG 844</h3>
                       <div class="rating">
                         <svg>
                           <use xlink:href="./images/sprite.svg#icon-star-full"></use>
@@ -337,7 +337,7 @@
                         </svg>
                       </div>
                       <div class="product__price">
-                        <h4>$900</h4>
+                        <h4>₹89</h4>
                       </div>
                       <a href="#"><button type="submit" class="product__btn">Add To Cart</button></a>
                     </div>
