--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                 <li class="glide__slide">
                   <div class="product">
                     <div class="product__header">
-                      <img src="images/products/OUD_OTG_844.jpg" alt="product">
+                      <img src="images/products/OUD_OTG_844.JPG" alt="product">
                     </div>
                     <div class="product__footer">
                       <h3>OD OTG 844</h3>
