--- a/index.html
+++ b/index.html
@@ -1084,7 +1084,7 @@
                 <use xlink:href="./images/sprite.svg#icon-location"></use>
               </svg>
             </span>
-            42 Dream House, Dreammy street, 7131 Dreamville, USA
+            rahimabadshop, onlinle, lucknow india
           </div>
           <div>
             <span>
@@ -1092,7 +1092,7 @@
                 <use xlink:href="./images/sprite.svg#icon-envelop"></use>
               </svg>
             </span>
-            company@gmail.com
+            rahimabadshophelp90@gmail.com
           </div>
           <div>
             <span>
@@ -1100,7 +1100,7 @@
                 <use xlink:href="./images/sprite.svg#icon-phone"></use>
               </svg>
             </span>
-            456-456-4512
+            
           </div>
           <div>
             <span>
